# Context

./: .clang-format  .dockerignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  Makefile.docker  README.md  docker-compose.yml  test_comprehensive_context  test_comprehensive_context.cpp  test_development_lifecycle_aware  vcpkg.json
.github/workflows/: docker-ci.yml
api/: ragger_plugin_api.h
benchmarks/: CMakeLists.txt  benchmark_eventbus.cpp  benchmark_fileutils.cpp  benchmark_simple.cpp
config/: ragger.conf
docs/: README.md  benchmark report
docs/api/: core-api.md
docs/benchmarks/: benchmark-results.md
docs/docker/: README.md
docs/examples/: basic-usage.md
docs/plugins/: plugin-development.md
plugins/clients/lsp_client/: LSPClientPlugin.cpp
plugins/context/documentation/: DocsPlugin.cpp
plugins/context/git_context/: GitContextPlugin.cpp
plugins/context/static_analysis/: StaticAnalysisPlugin.cpp
plugins/discovery/test_discovery/: TestDiscoveryPlugin.cpp
plugins/integrations/git_integration/: GitIntegrationPlugin.cpp
plugins/parsers/cpp_parser/: CppParserPlugin.cpp
plugins/parsers/treesitter_parser/: TreeSitterParserPlugin.cpp
plugins/rankers/bm25_ranker/: BM25RankerPlugin.cpp
plugins/rankers/graph_ranker/: GraphRankerPlugin.cpp
roadmap/: PROJECT_INDEX.md  next  roadmap  summary
scripts/ci/: run_all_tests.sh
scripts/docker/: health-check.sh
src/: main.cpp
src/core/: ComprehensiveContextGenerator.cpp  ComprehensiveContextGenerator.h  ConfigManager.cpp  ConfigManager.h  ContextEngine.cpp  ContextEngine.h  EventBus.cpp  EventBus.h  Exceptions.h  FileUtils.cpp  FileUtils.h  IndexManager.cpp  IndexManager.h  Logger.cpp  Logger.h  PluginManager.cpp  PluginManager.h
src/tools/: ragger-dev.cpp
src/ui/: GUI.cpp  GUI.h  console_interface.cpp  ragger-gui.cpp  simple_console.cpp  simple_gui.cpp  working_gui.cpp
tests/: CMakeLists.txt
tests/unit/: test_configmanager.cpp  test_eventbus.cpp  test_fileutils.cpp  test_simple.cpp
